--- a/css/main.css
+++ b/css/main.css
@@ -1511,52 +1511,53 @@ a:hover, a:focus {
 
 @media screen and (min-width: 480px) {
   .clients-list {
-    width: 480px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .clients-list {
-    width: 768px;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
   }
 }
 
 .client {
-  width: 170px;
+  width: 210px;
   height: 90px;
-  margin-right: 30px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .client {
     margin-bottom: 30px;
   }
-  .client:not(:last-child) {
+  .client:nth-child(n + 5) {
+    margin-bottom: 0;
+  }
+  .client:nth-child(2n + 1) {
     margin-right: 30px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .client {
-    width: 768px;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
+    width: calc((100%-90px) / 3);
+    margin-right: 30px;
+  }
+  .client:nth-child(3n + 3) {
+    margin-right: 0;
   }
 }
 
-.client:last-child {
-  margin-right: 0;
+@media screen and (min-width: 1200px) {
+  .client {
+    width: 1200px;
+    -ms-flex-preferred-size: 33.33333%;
+        flex-basis: 33.33333%;
+    margin-right: 30px;
+  }
+  .client:last-child {
+    margin-right: 0;
+  }
 }
 
 .client:hover, .client:focus {
