--- a/css/main.css
+++ b/css/main.css
@@ -416,6 +416,8 @@ a:hover, a:focus {
   margin-left: auto;
   margin-right: auto;
   outline: 1px solid tomato;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .container.container-portfolio {
@@ -424,16 +426,12 @@ a:hover, a:focus {
 
 @media screen and (min-width: 480px) {
   .container {
-    padding-top: 60px;
-    padding-bottom: 60px;
     width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    padding-top: 60px;
-    padding-bottom: 60px;
     width: 768px;
   }
 }
@@ -1395,13 +1393,11 @@ a:hover, a:focus {
 /* footer */
 .footer {
   background-color: #2f303a;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  text-align: center;
 }
 
 @media screen and (min-width: 480px) {
   .footer {
-    width: 480px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1414,18 +1410,9 @@ a:hover, a:focus {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer .link:hover, .footer .link:focus {
-  color: #2196f3;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .footer-p {
   margin-bottom: 9px;
   color: #ffffff;
-  width: 231px;
 }
 
 .footer-p:last-child {
@@ -1451,23 +1438,9 @@ a:hover, a:focus {
 }
 
 .logo-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-
-@media screen and (min-width: 480px) {
-  .logo-footer {
-    width: 480px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
 }
 
 .logo-div {
@@ -1507,6 +1480,8 @@ a:hover, a:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media screen and (min-width: 480px) {
@@ -1520,15 +1495,15 @@ a:hover, a:focus {
 }
 
 .client {
-  width: 210px;
   height: 90px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .client {
     margin-bottom: 30px;
+    width: calc((100% - 60px) / 2);
   }
   .client:nth-child(n + 5) {
     margin-bottom: 0;
@@ -1540,20 +1515,22 @@ a:hover, a:focus {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .client {
-    width: calc((100%-90px) / 3);
+    width: calc((100% - 3 * 30px) / 3);
     margin-right: 30px;
+    margin-bottom: 30px;
   }
   .client:nth-child(3n + 3) {
     margin-right: 0;
+  }
+  .client:nth-child(n + 4) {
+    margin-bottom: 0;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .client {
-    width: 1200px;
-    -ms-flex-preferred-size: 33.33333%;
-        flex-basis: 33.33333%;
     margin-right: 30px;
+    width: 170px;
   }
   .client:last-child {
     margin-right: 0;
@@ -1589,10 +1566,6 @@ a:hover, a:focus {
 }
 
 /* footer form */
-.footer-shared {
-  margin-left: 93px;
-}
-
 @media screen and (min-width: 480px) {
   .footer-shared {
     width: 480px;
@@ -1619,9 +1592,6 @@ a:hover, a:focus {
 
 .footer-distribution {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1636,9 +1606,15 @@ a:hover, a:focus {
 }
 
 /* footer social */
-.footer-social .social-list {
-  padding: 0;
-  margin: 0;
+.footer-social {
+  margin-bottom: 60px;
+  margin-top: 60px;
+}
+
+.resourse {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
 .footer-social .logo-icon {
