--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -2,7 +2,7 @@
 .footer-shared {
   // display: flex;
   // flex-direction: column;
-  margin-left: 93px;
+  // margin-left: 93px;
 
   @media screen and (min-width: $mobile) {
     width: $mobile;
@@ -23,7 +23,7 @@
 
 .footer-distribution {
   position: relative;
-  display: flex;
+  // display: flex;
   align-items: center;
 
   & .btn-footer {
