--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,25 +1,21 @@
-@import './utils//modern-normalize';
-@import './utils/variables';
-@import './utils/fonts';
-@import './utils/breakpoints';
+@import "./utils//modern-normalize";
+@import "./utils/variables";
+@import "./utils/fonts";
+@import "./utils/breakpoints";
 
-@import './components/base';
-@import './components/container';
-@import './components/hero';
-@import './components/form';
-@import './components/form-btn-hero';
-@import './components/checkbox';
-@import './components/logo';
-@import './components/projects';
-@import './components/social';
-@import './components/button';
-@import './components/page-header';
-@import './components/our-jobs';
-@import './components/our-team';
-@import './components/page-footer';
-@import './components/menu';
-@import './components/clients';
-@import './components/footer-form';
-@import './components/footer-social';
-
-
+@import "./components/base";
+@import "./components/container";
+@import "./components/hero";
+@import "./components/form";
+@import "./components/form-btn-hero";
+@import "./components/checkbox";
+@import "./components/logo";
+@import "./components/projects";
+@import "./components/social";
+@import "./components/button";
+@import "./components/page-header";
+@import "./components/our-jobs";
+@import "./components/our-team";
+@import "./components/page-footer";
+@import "./components/menu";
+@import "./components/clients";
