--- a/css/main.css
+++ b/css/main.css
@@ -998,13 +998,6 @@ a:hover, a:focus {
 }
 
 .btn-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
   color: #ffffff;
   background-color: #2196f3;
   border-radius: 4px;
@@ -1016,6 +1009,12 @@ a:hover, a:focus {
   padding: 10px 28px 10px 29px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 480px) {
+  .btn-footer {
+    margin-top: 20px;
+  }
 }
 
 .btn-footer:hover, .btn-footer:focus {
@@ -1031,7 +1030,28 @@ a:hover, a:focus {
   background-color: #fff;
 }
 
-/* navigation */
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.menu-button .icon-close {
+  display: none;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: #2196f3;
@@ -1452,6 +1472,60 @@ a:hover, a:focus {
   margin-bottom: 0;
 }
 
+/* footer form */
+@media screen and (min-width: 480px) {
+  .footer-shared {
+    width: 480px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.footer-input {
+  background-color: #2f303a;
+  width: 358px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  padding: 15px 16px;
+}
+
+.footer-distribution {
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-distribution .footer-svg {
+  margin-left: 10px;
+}
+
+/* footer social */
+.footer-social {
+  margin-bottom: 60px;
+  margin-top: 60px;
+}
+
+.resourse {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.footer-social .logo-icon {
+  fill: #ffffff;
+}
+
+.footer-social .social-link:hover,
+.footer-social .social-link:focus {
+  background-color: #2196f3;
+}
+
 /* выпадающее меню */
 .menu {
   padding: 0;
@@ -1563,66 +1637,5 @@ a:hover, a:focus {
 .client-link:hover, .client-link:focus {
   border-color: #2196f3;
   fill: #2196f3;
-}
-
-/* footer form */
-@media screen and (min-width: 480px) {
-  .footer-shared {
-    width: 480px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
-
-.footer-input {
-  background-color: #2f303a;
-  width: 358px;
-  height: 50px;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  padding: 15px 16px;
-}
-
-.footer-distribution {
-  position: relative;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.footer-distribution .btn-footer {
-  margin-left: 12px;
-}
-
-.footer-distribution .footer-svg {
-  margin-left: 10px;
-}
-
-/* footer social */
-.footer-social {
-  margin-bottom: 60px;
-  margin-top: 60px;
-}
-
-.resourse {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-
-.footer-social .logo-icon {
-  fill: #ffffff;
-}
-
-.footer-social .social-link:hover,
-.footer-social .social-link:focus {
-  background-color: #2196f3;
 }
 /*# sourceMappingURL=main.css.map */
