--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -2,8 +2,6 @@
 .footer {
   background-color: $main-bcg;
   text-align: center;
-  // padding-top: 60px;
-  // padding-bottom: 60px;
 
   @media screen and (min-width: $mobile) {
     display: flex;
@@ -63,4 +61,59 @@
 
 .footer-social .social-icon {
   margin-bottom: 0;
+}
+
+/* footer form */
+.footer-shared {
+  // display: flex;
+  // flex-direction: column;
+  // margin-left: 93px;
+
+  @media screen and (min-width: $mobile) {
+    width: $mobile;
+    // display: flex;
+    flex-wrap: wrap;
+  }
+}
+.footer-input {
+  background-color: $main-bcg;
+  width: 358px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  padding: 15px 16px;
+}
+
+.footer-distribution {
+  position: relative;
+  // display: flex;
+  align-items: center;
+
+  & .footer-svg {
+    margin-left: 10px;
+  }
+}
+
+/* footer social */
+.footer-social {
+  margin-bottom: 60px;
+  margin-top: 60px;
+}
+.resourse {
+  display: inline-flex;
+}
+// .footer-social .social-list {
+//     padding: 0;
+//     margin: 0;
+//   }
+
+.footer-social .logo-icon {
+  fill: $white-color;
+}
+
+.footer-social .social-link:hover,
+.footer-social .social-link:focus {
+  background-color: $accent-color;
 }
