--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -4,6 +4,12 @@
   box-sizing: border-box;
   padding: 40px;
 
+  @media screen and (max-width: 767px) {
+    width: calc(100% - 30px);
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
   &-close {
     width: 16px;
     height: 16px;
