--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,5 +17,5 @@
 @import "./components/our-jobs";
 @import "./components/our-team";
 @import "./components/page-footer";
-@import "./components/menu";
+// @import "./components/menu";
 @import "./components/clients";
