--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -8,6 +8,12 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
+  // контейнер для хедера
+  @media screen and (max-width: 767px) {
+    padding-bottom: 16px;
+    padding-top: 16px;
+  }
+
   &.container-portfolio {
     border-top: 1px solid #ececec;
   }
