--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -6,8 +6,8 @@
 
   @media screen and (max-width: 767px) {
     width: calc(100% - 30px);
-    margin-right: 15px;
-    margin-left: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 
   &-close {
