--- a/css/main.css
+++ b/css/main.css
@@ -455,8 +455,8 @@ a:hover, a:focus {
 .hero {
   font-family: "Roboto", sans-serif;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 136%;
+  font-size: 26px;
+  line-height: 1.62;
   color: #ffffff;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -474,8 +474,15 @@ a:hover, a:focus {
   background-repeat: no-repeat;
   background-position: center;
   text-align: center;
-  padding-bottom: 200px;
-  padding-top: 200px;
+  padding-bottom: 198px;
+  padding-top: 118px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-page {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 /* модальное окно-overlay(backdrop) */
@@ -490,7 +497,21 @@ a:hover, a:focus {
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 93px 15px;
+  overflow-y: scroll;
   /* скрываем модальное окно */
+}
+
+@media screen and (min-width: 768px) {
+  .backdrop {
+    padding: 208px 159px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    padding: 0;
+  }
 }
 
 .backdrop.is-hidden {
@@ -500,13 +521,37 @@ a:hover, a:focus {
 
 /* делает кликабелным все что под модалкой */
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 528px;
-  background-color: #ffffff;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  min-width: 450px;
+  min-height: 581px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+@media screen and (max-width: 479px) {
+  .modal {
+    min-width: 100%;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    min-width: 450px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 528px;
+    background-color: #ffffff;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    text-replace: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+  }
 }
 
 .close-button {
@@ -1056,7 +1101,13 @@ a:hover, a:focus {
   background-color: transparent;
 }
 
-.menu-button .icon-close {
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-menu {
   display: none;
 }
 
@@ -1078,6 +1129,7 @@ a:hover, a:focus {
 @media screen and (max-width: 767px) {
   .menu-container {
     display: none;
+    border-top: 1px solid #ececec;
     position: absolute;
     top: 100%;
     left: 0;
@@ -1095,7 +1147,6 @@ a:hover, a:focus {
 }
 
 .main-nav {
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
