--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -10,9 +10,13 @@
   padding: 0;
   border: 0;
   background-color: transparent;
+
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
 }
 
-.menu-button .icon-close {
+.menu-button .icon-menu {
   display: none;
 }
 
@@ -32,6 +36,7 @@
 
   @media screen and (max-width: 767px) {
     display: none;
+    border-top: 1px solid #ececec;
 
     position: absolute;
     top: 100%;
@@ -56,7 +61,6 @@
 
 // navigation
 .main-nav {
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
