--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./components/social";
 @import "./components/button";
 @import "./components/page-header";
+@import "./components/jobs-img";
 @import "./components/our-jobs";
 @import "./components/our-team";
 @import "./components/page-footer";
