--- a/css/main.css
+++ b/css/main.css
@@ -521,6 +521,7 @@ a:hover, a:focus {
 
 /* делает кликабелным все что под модалкой */
 .modal {
+  background-color: #ffffff;
   min-width: 450px;
   min-height: 581px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -540,7 +541,6 @@ a:hover, a:focus {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 528px;
     background-color: #ffffff;
     -webkit-transform: translate(-50%, -50%) scale(1);
             transform: translate(-50%, -50%) scale(1);
@@ -752,6 +752,16 @@ a:hover, a:focus {
 
 .checkbox-lable {
   padding-bottom: 30px;
+}
+
+.check-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
 /* на будущее
@@ -1300,7 +1310,6 @@ a:hover, a:focus {
   fill: #2196f3;
 }
 
-/* наши работы */
 .jobs-img .title,
 .team > h2 {
   font-family: "Roboto", sans-serif;
@@ -1308,6 +1317,12 @@ a:hover, a:focus {
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+}
+
+@media screen and (max-width: 1199px) {
+  .jobs-img {
+    display: none;
+  }
 }
 
 .pictures {
@@ -1363,25 +1378,90 @@ a:hover, a:focus {
   margin-right: 0;
 }
 
-.title.works {
-  margin-bottom: 10px;
-}
-
-@media screen and (min-width: 480px) {
-  .title.works {
-    text-align: center;
+/* наши работы */
+@media screen and (min-width: 768px) {
+  .features {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-right: -15px;
   }
 }
 
-.features {
+@media screen and (min-width: 1200px) {
+  .features {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 0;
+  }
+}
+
+.features-list {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.features-list:nth-last-child(-n + 1) {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .features-list {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .features-list {
+    width: calc((100% - 30px) / 2);
+    margin-right: 15px;
+  }
+  .features-list:nth-child(2n) {
+    margin-right: 0;
+  }
+  .features-list:nth-child(n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features-list {
+    width: calc 2.5%;
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+  .features-list:last-child {
+    margin-right: 0;
+  }
+}
+
+.features-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border: 1px solid transparent;
+  background-repeat: 4px;
+  background-color: #f5f4fa;
 }
 
 .features .title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  display: block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   line-height: 1.14;
@@ -1389,47 +1469,22 @@ a:hover, a:focus {
   text-transform: uppercase;
 }
 
+@media screen and (max-width: 767px) {
+  .features .title {
+    text-align: center;
+  }
+}
+
 .features p {
+  font-style: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
-.features-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 120px;
-  margin-bottom: 30px;
-  background: #f5f4fa;
-  border-radius: 4px;
-}
-
-.features > .item {
-  margin-right: 30px;
-}
-
-@media screen and (min-width: 480px) {
-  .features-list {
-    width: 480px;
+@media screen and (max-width: 767px) {
+  .features p {
+    text-align: center;
   }
-}
-
-@media screen and (min-width: 768px) {
-  .features-list {
-    width: 768px;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-  }
-}
-
-.features-list:last-child {
-  margin-right: 0;
 }
 
 .antenna-icon,
