--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -66,6 +66,7 @@
 
 /* делает кликабелным все что под модалкой */
 .modal {
+  background-color: $white-color;
   min-width: 450px;
   min-height: 581px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -81,7 +82,6 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 528px;
     background-color: $white-color;
     transform: translate(-50%, -50%) scale(1);
     text-replace: transform 250ms $timing-function;
