--- a/sass/components/_our-jobs.scss
+++ b/sass/components/_our-jobs.scss
@@ -4,115 +4,143 @@
 //   padding-bottom: 94px;
 // }
 
-.jobs-img .title,
-.team > h2 {
-  font-family: $main-font, sans-serif;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
+// .title.works {
+//   margin-bottom: 10px;
+//   @media screen and (min-width: $mobile) {
+//     text-align: center;
+//   }
+// }
+// .features {
+//   display: flex;
+//   flex-wrap: wrap;
+//   // align-items: center;
+
+//   & .title {
+//     font-family: $main-font, sans-serif;
+//     font-weight: 700;
+//     line-height: 1.14;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//   }
+
+//   & p {
+//     line-height: 1.71;
+//     letter-spacing: 0.03em;
+//   }
+
+//   &-icon {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     height: 120px;
+//     margin-bottom: 30px;
+//     background: $bcg-our-team;
+//     border-radius: 4px;
+//   }
+
+//   & > .item {
+//     margin-right: 30px;
+//   }
+// }
+
+// .features-list {
+//   @media screen and (min-width: $mobile) {
+//     width: $mobile;
+//   }
+//   @media screen and (min-width: $tablet) {
+//     width: $tablet;
+//     flex-basis: 50%;
+//   }
+
+//   &:last-child {
+//     margin-right: 0;
+//   }
+// }
+
+// .antenna-icon,
+// .clock-icon,
+// .diagram-icon,
+// .astronaut-icon {
+//   width: 70px;
+//   height: 70px;
+// }
+
+.features {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-right: 0;
+  }
 }
+.features-list {
+  margin-right: 30px;
+  margin-bottom: 30px;
 
-.pictures {
-  display: flex;
-  flex-wrap: wrap;
-
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
-    flex-basis: 50%;
+  &:nth-last-child(-n + 1) {
+    margin-bottom: 0;
   }
 
-  & img {
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 30px) / 2);
+    margin-right: 15px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(n + 3) {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc ((100% - 90) / 4);
     margin-right: 30px;
-    display: block;
+    margin-bottom: 0;
 
     &:last-child {
       margin-right: 0;
     }
   }
 }
-
-.card {
-  // position: relative;
-
-  &-text {
-    @media screen and (min-width: $mobile) {
-      width: 450px;
-      height: 50px;
-    }
-    // display: flex;
-    // width: 370px;
-    // height: 70px;
-    font-family: $main-font, sans-serif;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    justify-content: center;
-    align-items: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $white-color;
-    background-color: $bcg-jobs-img;
-
-    // position: absolute;
-    // bottom: 0;
-    // left: 0;
-  }
+.features-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border: 1px solid transparent;
+  background-repeat: 4px;
+  background-color: $bcg-our-team;
 }
-.pictures img:last-child {
-  margin-right: 0;
-}
-
-.title.works {
+.features .title {
+  margin-top: 30px;
   margin-bottom: 10px;
-  @media screen and (min-width: $mobile) {
+  display: block;
+  justify-content: center;
+
+  font-family: $main-font, sans-serif;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  @media screen and (max-width: 767px) {
     text-align: center;
   }
 }
-.features {
-  display: flex;
-  flex-wrap: wrap;
-  // align-items: center;
 
-  & .title {
-    font-family: $main-font, sans-serif;
-    font-weight: 700;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  }
-
-  & p {
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-  }
-
-  &-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-    margin-bottom: 30px;
-    background: $bcg-our-team;
-    border-radius: 4px;
-  }
-
-  & > .item {
-    margin-right: 30px;
-  }
-}
-
-.features-list {
-  @media screen and (min-width: $mobile) {
-    width: $mobile;
-  }
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
-    flex-basis: 50%;
-  }
-
-  &:last-child {
-    margin-right: 0;
+.features p {
+  font-style: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  @media screen and (max-width: 767px) {
+    text-align: center;
   }
 }
 
