--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -4,10 +4,13 @@
   box-sizing: border-box;
   padding: 40px;
 
+  // @media screen and (max-width: 479px) {
+  //   position: relative;
+  // }
+
   @media screen and (max-width: 767px) {
     width: calc(100% - 30px);
     padding-right: 15px;
-    padding-left: 15px;
   }
 
   &-close {
