--- a/sass/components/_jobs-img.scss
+++ b/sass/components/_jobs-img.scss
@@ -15,12 +15,6 @@
 
 .pictures {
   display: flex;
-  flex-wrap: wrap;
-
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
-    flex-basis: 50%;
-  }
 
   & img {
     margin-right: 30px;
@@ -33,16 +27,14 @@
 }
 
 .card {
-  // position: relative;
+  position: relative;
 
   &-text {
-    @media screen and (min-width: $mobile) {
-      width: 450px;
-      height: 50px;
-    }
-    // display: flex;
-    // width: 370px;
-    // height: 70px;
+    width: 450px;
+    height: 50px;
+    display: flex;
+    width: 370px;
+    height: 70px;
     font-family: $main-font, sans-serif;
     font-weight: 700;
     font-size: 14px;
@@ -54,9 +46,9 @@
     color: $white-color;
     background-color: $bcg-jobs-img;
 
-    // position: absolute;
-    // bottom: 0;
-    // left: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
   }
 }
 .pictures img:last-child {
