--- a/sass/components/_our-jobs.scss
+++ b/sass/components/_our-jobs.scss
@@ -99,7 +99,7 @@
     }
   }
   @media screen and (min-width: 1200px) {
-    width: calc ((100% - 90) / 4);
+    width: calc((100% - 90px) / 4);
     margin-right: 30px;
     margin-bottom: 0;
 
@@ -140,7 +140,7 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   @media screen and (max-width: 767px) {
-    text-align: center;
+    // text-align: center;
   }
 }
 
