--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,6 +2,11 @@
 .header {
   background-color: #fff;
   position: relative;
+
+  @media screen and (max-width: 767px) {
+    padding-bottom: 16px;
+    padding-top: 16px;
+  }
 }
 // бургер меню на студию портфолио
 .menu-button {
