--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -3,10 +3,10 @@
   background-color: $main-bcg;
   text-align: center;
 
-  @media screen and (min-width: $mobile) {
-    display: flex;
-    flex-wrap: wrap;
-  }
+  // @media screen and (min-width: $mobile) {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  // }
 
   & .link {
     color: $footer-color;
@@ -42,15 +42,17 @@
     text-transform: uppercase;
     color: $white-color;
     margin-bottom: 20px;
-    padding-top: 12px;
   }
 }
 
 .logo-footer {
-  // display: flex;
-  justify-content: space-between;
-
-  @media screen and (min-width: $mobile) {
+  text-align: center;
+  .container {
+    width: 768px;
+  }
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 .logo-div {
@@ -64,38 +66,45 @@
 }
 
 /* footer form */
-.footer-shared {
-  // display: flex;
-  // flex-direction: column;
-  // margin-left: 93px;
+// .footer-shared {
+//   display: flex;
+//   flex-direction: column;
+//   margin-left: 93px;
 
-  @media screen and (min-width: $mobile) {
-    // width: $mobile;
-    // display: flex;
-    flex-wrap: wrap;
-  }
+//   @media screen and (min-width: $mobile) {
+//     // width: $mobile;
+//     // display: flex;
+//     flex-wrap: wrap;
+//   }
 
-  @media screen and (min-width: $tablet) {
-    // width: $mobile;
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
+//   @media screen and (min-width: 767px) and (max-width: 1199px) {
+//     flex-wrap: wrap;
+//   }
+// }
 .footer-input {
   background-color: $main-bcg;
-  width: 358px;
+  width: 450px;
   height: 50px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   padding: 15px 16px;
+
+  @media screen and (max-width: 480px) {
+    width: 100%;
+  }
 }
 
 .footer-distribution {
   position: relative;
-  // display: flex;
+  display: block;
   align-items: center;
+
+  // @media screen and (min-width: 767px) and (max-width: 1199px) {
+  //   // display: flex;
+  //   // flex-wrap: wrap;
+  // }
 
   & .footer-svg {
     margin-left: 10px;
