--- a/css/main.css
+++ b/css/main.css
@@ -1093,6 +1093,15 @@ a:hover, a:focus {
 
 .btn-footer {
   margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #ffffff;
   background-color: #2196f3;
   border-radius: 4px;
@@ -1112,6 +1121,13 @@ a:hover, a:focus {
           transition-duration: 250ms;
   -webkit-transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
           transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .btn-footer {
+    margin-top: 0;
+    margin-left: 12px;
+  }
 }
 
 /* header */
@@ -1596,6 +1612,12 @@ a:hover, a:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 0 32px 30px;
 }
 
@@ -1610,12 +1632,6 @@ a:hover, a:focus {
         -ms-flex-pack: center;
             justify-content: center;
     margin-bottom: 24px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .social-list {
-    width: 768px;
   }
 }
 
@@ -1663,17 +1679,36 @@ a:hover, a:focus {
   text-align: center;
 }
 
-.logo-footer .container {
-  width: 768px;
-}
-
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .logo-footer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    padding-left: 76px;
+    padding-right: 89px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -1687,6 +1722,10 @@ a:hover, a:focus {
 }
 
 /* footer form */
+.footer-shared {
+  text-align: left;
+}
+
 .footer-input {
   background-color: #2f303a;
   width: 450px;
@@ -1700,18 +1739,69 @@ a:hover, a:focus {
   padding: 15px 16px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 479px) {
   .footer-input {
     width: 100%;
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-input {
+    width: 358px;
+  }
+}
+
 .footer-distribution {
   position: relative;
-  display: block;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: inline-block;
+}
+
+@media screen and (max-width: 767px) {
+  .footer-distribution {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .footer-distribution {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-distribution {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .footer-distribution .footer-svg {
@@ -1719,15 +1809,15 @@ a:hover, a:focus {
 }
 
 /* footer social */
-.footer-social {
-  margin-bottom: 60px;
-  margin-top: 60px;
-}
-
 .resourse {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+}
+
+.footer-social .social-list {
+  padding: 0;
+  margin: 0;
 }
 
 .footer-social .logo-icon {
@@ -1737,6 +1827,12 @@ a:hover, a:focus {
 .footer-social .social-link:hover,
 .footer-social .social-link:focus {
   background-color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-social {
+    margin-right: 93px;
+  }
 }
 
 /* clients */
