--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -78,12 +78,11 @@
 
 /* footer form */
 .footer-shared {
-  // display: flex;
-
-  // flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
   text-align: left;
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
 }
 
 .footer-input {
@@ -154,6 +153,11 @@
 }
 
 .footer-social {
+  @media screen and (max-width: 1199px) {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+
   @media screen and (min-width: $desktop) {
     margin-right: 93px;
   }
