--- a/css/main.css
+++ b/css/main.css
@@ -557,6 +557,7 @@ a:hover, a:focus {
 @media screen and (max-width: 479px) {
   .modal {
     min-width: 100%;
+    position: relative;
   }
 }
 
@@ -1361,6 +1362,10 @@ a:hover, a:focus {
   letter-spacing: 0.03em;
 }
 
+.jobs-img {
+  padding-top: 0;
+}
+
 @media screen and (max-width: 1199px) {
   .jobs-img {
     display: none;
@@ -1386,6 +1391,10 @@ a:hover, a:focus {
   position: relative;
 }
 
+.card:not(:last-child) {
+  margin-right: 30px;
+}
+
 .card-text {
   width: 450px;
   height: 50px;
@@ -1407,7 +1416,7 @@ a:hover, a:focus {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  background-color: rgba(47, 48, 58, 0.4);
+  background-color: rgba(47, 48, 58, 0.8);
   position: absolute;
   bottom: 0;
   left: 0;
@@ -1533,65 +1542,64 @@ a:hover, a:focus {
   background-color: #f5f4fa;
 }
 
-@media screen and (min-width: 480px) {
-  .container.our-team {
-    width: 480px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .pictures-team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .container.our-team {
-    width: 768px;
+@media screen and (min-width: 1200px) {
+  .pictures-team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 0;
   }
 }
 
 .team-list {
-  background-color: #ffffff;
-  margin-right: 30px;
+  padding-bottom: 24px;
+  margin-bottom: 30px;
+  width: 100%;
   text-align: center;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: #ffffff;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
+  .team-list:nth-last-child(-n + 1) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-list {
-    width: 100%;
-    margin: 0;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .team-list {
-    width: 768px;
-    margin: 0;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-  }
-}
-
-.team-list:last-child {
-  margin-right: 0;
-}
-
-.workers > img {
-  margin-bottom: 30px;
-  display: block;
-}
-
-@media screen and (min-width: 480px) {
-  .workers > img {
-    width: 450px;
-    height: 460px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .workers > img {
-    width: 354px;
-    height: 374px;
-  }
-  .workers > img :not(:last-child) {
+    width: calc((100% - 30px) / 2);
     margin-right: 30px;
+  }
+  .team-list:nth-child(2n) {
+    margin-right: 0;
+  }
+  .team-list:nth-child(n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list {
+    padding-bottom: 30px;
+    width: calc((100% - 90px) / 4);
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+  .team-list:last-child {
+    margin-right: 0;
   }
 }
 
@@ -1602,10 +1610,18 @@ a:hover, a:focus {
   line-height: 1.18;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
+  margin-top: 30px;
 }
 
 .workers-prof {
   margin-bottom: 16px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .social-list {
