--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -114,6 +114,7 @@
 
   @media screen and (max-width: 479px) {
     min-width: 100%;
+    position: relative;
   }
 
   @media screen and (min-width: $mobile) {
