--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -3,68 +3,140 @@
   background-color: $bcg-our-team;
 }
 
-.container.our-team {
-  @media screen and (min-width: $mobile) {
-    width: $mobile;
-  }
+// .container.our-team {
+//   @media screen and (min-width: $mobile) {
+//     width: $mobile;
+//   }
 
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
-  }
-}
-.team-list {
-  @media screen and (min-width: $mobile) {
-    width: 100%;
-    margin: 0;
-  }
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     // flex-wrap: wrap;
+//     margin-right: -15px;
+//   }
+// }
+// .team-list {
+//   background-color: $white-color;
+//   margin-right: 30px;
+//   text-align: center;
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 2px 1px rgba(0, 0, 0, 0.2);
 
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
-    margin: 0;
-    flex-basis: 50%;
+//   @media screen and (min-width: $mobile) {
+//     width: 100%;
+//     margin: 0;
+//   }
+
+//   // @media screen and (min-width: $tablet) {
+//   //   width: $tablet;
+//   //   margin: 0;
+//   //   flex-basis: 50%;
+//   // }
+//   @media screen and (min-width: 768px) and (max-width: 1199px) {
+//     width: calc((100% - 30px) / 2);
+//     margin-right: 15px;
+
+//     &:nth-child(2n) {
+//       margin-right: 0;
+//     }
+//     &:nth-child(n + 3) {
+//       margin-bottom: 0;
+//     }
+//   }
+
+//   &:last-child {
+//     margin-right: 0;
+//   }
+// }
+.pictures-team {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
   }
-
-  background-color: $white-color;
-  margin-right: 30px;
-  text-align: center;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-
-  &:last-child {
+  @media screen and (min-width: 1200px) {
+    display: flex;
     margin-right: 0;
   }
 }
 
-.workers > img {
+.team-list {
+  padding-bottom: 24px;
   margin-bottom: 30px;
-  display: block;
+  width: 100%;
+  text-align: center;
 
-  @media screen and (min-width: $mobile) {
-    width: 450px;
-    height: 460px;
-    // margin: 0;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: $white-color;
+
+  @media screen and (max-width: 767px) {
+    &:nth-last-child(-n + 1) {
+      margin-bottom: 0;
+    }
   }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 30px) / 2);
+    margin-right: 30px;
 
-  @media screen and (min-width: $tablet) {
-    width: 354px;
-    height: 374px;
-    & :not(:last-child) {
-      margin-right: 30px;
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(n + 3) {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 30px;
+    width: calc((100% - 90px) / 4);
+    margin-right: 30px;
+    margin-bottom: 0;
+
+    &:last-child {
+      margin-right: 0;
     }
   }
 }
+// .workers > img {
+//   margin-bottom: 30px;
+//   display: block;
+
+//   @media screen and (min-width: $mobile) {
+//     width: 450px;
+//     height: 460px;
+//     // margin: 0;
+//   }
+
+//   @media screen and (min-width: $tablet) {
+//     width: 354px;
+//     height: 374px;
+//     & :not(:last-child) {
+//       margin-right: 30px;
+//     }
+//   }
+// }
 .title.name {
   font-family: $main-font, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
+
   margin-bottom: 10px;
+  margin-top: 30px;
 }
 
 .workers-prof {
   margin-bottom: 16px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
+
 .social-list {
   display: flex;
   align-items: center;
