--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -21,6 +21,7 @@ $bcg-our-team: #f5f4fa;
 $color-socseti: rgba(175, 177, 184, 1);
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 $bcg-jobs-img: rgba(47, 48, 58, 0.4);
+$bcg-jobs-img2: rgba(47, 48, 58, 0.8);
 $portfolio-item: #eeeeee;
 
 // FONTS
